--- a/Dos.ORM.csproj
+++ b/Dos.ORM.csproj
@@ -100,6 +100,11 @@
     <Compile Include="Expression\ExpressionVisitor.cs" />
     <Compile Include="Expression\FastEvaluator.cs" />
     <Compile Include="Expression\FastPartialEvaluator.cs" />
+    <Compile Include="Expression\ConstructorInvoker.cs" />
+    <Compile Include="Expression\FastReflection.cs" />
+    <Compile Include="Expression\FieldAccessor.cs" />
+    <Compile Include="Expression\MethodInvoker.cs" />
+    <Compile Include="Expression\PropertyAccessor.cs" />
     <Compile Include="Expression\HashedListCache.cs" />
     <Compile Include="Expression\IEvaluator.cs" />
     <Compile Include="Expression\IExpressionCache.cs" />
