--- a/Demo在这里/中级玩法demo之repository/DataAccess.Entities/DataAccess.Entities.csproj
+++ b/Demo在这里/中级玩法demo之repository/DataAccess.Entities/DataAccess.Entities.csproj
@@ -44,6 +44,7 @@
     <Compile Include="Base\EntityExtentions.cs" />
     <Compile Include="Base\Param.cs" />
     <Compile Include="Base\ParamExtentions.cs" />
+    <Compile Include="Model\CmsTitleTitlePartRecord.cs" />
     <Compile Include="Model\TestTable.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ViewModel\TestTable.cs" />
