--- a/Dos.ORM.Test/Dos.ORM.Test.csproj
+++ b/Dos.ORM.Test/Dos.ORM.Test.csproj
@@ -45,6 +45,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Model\BizHouse.cs" />
     <Compile Include="Model\CmsNews.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
