--- a/Dos.ORM.Standard/Dos.ORM/Dos.ORM.csproj
+++ b/Dos.ORM.Standard/Dos.ORM/Dos.ORM.csproj
@@ -3,17 +3,19 @@
   <PropertyGroup>
     <!--net20;-->
     <TargetFrameworks>net40;netstandard2.0</TargetFrameworks>
-    <Version>1.12.1</Version>
+    <Version>1.15</Version>
     <Authors>ITdos</Authors>
     <Company>www.ITdos.com</Company>
     <Description>Dos.ORM（原Hxj.Data）于2009年发布、2015年正式开源，支持core，该组件已在数百个成熟项目中应用，是目前国内.Net用户量最多、最活跃、最完善的国产ORM。初期开发过程中参考了NBear与MySoft，吸取了他们的一些精华，加入新思想，后期参考EF的Lambda语法进行大量扩展。官方网站：http://ITdos.com/Dos/ORM/Index.html 交流QQ群：60831381</Description>
     <Copyright>Copyright 2009-2018 ITdos</Copyright>
     <PackageReleaseNotes>Dos.ORM（原Hxj.Data）于2009年发布、2015年正式开源，该组件已在数百个成熟项目中应用，是目前国内.Net用户量最多、最活跃、最完善的国产ORM。初期开发过程中参考了NBear与MySoft，吸取了他们的一些精华，加入新思想，后期参考EF的Lambda语法进行大量扩展。官方网站：http://ITdos.com/Dos/ORM/Index.html 交流QQ群：60831381</PackageReleaseNotes>
-    <PackageIconUrl>http://www.itdos.com/Plugins/CMS/Content/Img/48.ico</PackageIconUrl>
+    <PackageIconUrl>https://www.itdos.com/static/img/icon/itdos-48.png</PackageIconUrl>
     <PackageProjectUrl>http://www.itdos.com/dos/orm/index.html</PackageProjectUrl>
     <PackageLicenseUrl>http://www.itdos.com/dos/orm/index.html</PackageLicenseUrl>
     <PackageTags>Dos,Dos.,Dos.ORM,Dos.WeChat,Dos.Common,Dos.ORM.NoSql,Dos.Captcha,Dos.Net</PackageTags>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
+    <AssemblyVersion>1.15.0.0</AssemblyVersion>
+    <FileVersion>1.15.0.0</FileVersion>
   </PropertyGroup>
 
   <ItemGroup>
